--- a/Two-Truths-One-Lie/styles.css
+++ b/Two-Truths-One-Lie/styles.css
@@ -31,3 +31,51 @@
 body {
   font: 100% "Poppins", sans-serif;
 }
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 15rem;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    grid-template-rows: 1fr auto;
+  }
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f2f2f2;
+    padding: 20px;
+    border-radius: 10px;
+  }
+  img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
+  h1, h3{
+
+    text-align: center;
+  }
+  h4 { grid-row-end: 2;
+    text-align: center;
+    grid-template-rows: 1fr auto;
+   }
+  p {
+    text-align: center;
+    
+  }
+  /* Media query for responsive layout */
+  @media (max-width: 768px) {
+    .container {
+      grid-template-columns: 1fr;
+      margin-left: 10rem;
+    margin-right: 10rem;
+    }
+    h4 {
+      margin-top: 9rem;
+
+    }
+    
+  }
+
